crates/keron-lang/tests/corpus/errors/check/union_eq_cross_union.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: cannot compare distinct string unions `OsType` and `OsArch`
  --> 3:22
  |
3 | val never: Boolean = os_type() == os_arch()
  |                      ^^^^^^^^^^^^^^^^^^^^^^^
